adding chamber controller and new endpoints
