# cmd/zym/handlers/chambers.go
@@ -5,23 +5,30 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"strconv"
 
-	"github.com/benjaminbartels/zymurgauge/internal"
+	"github.com/benjaminbartels/zymurgauge/cmd/zym/controller"
 	"github.com/benjaminbartels/zymurgauge/internal/chamber"
 	"github.com/benjaminbartels/zymurgauge/internal/platform/web"
 	"github.com/julienschmidt/httprouter"
 	"github.com/pkg/errors"
+	"github.com/sirupsen/logrus"
 )
 
+type Status struct {
+	Message string `json:"message"`
+}
+
 type ChambersHandler struct {
-	Repo internal.ChamberRepo
+	ChamberController controller.ChamberController
+	Logger            *logrus.Logger // TODO: use log entry logger
 }
 
 func (h *ChambersHandler) GetAll(ctx context.Context, w http.ResponseWriter, r *http.Request,
 	p httprouter.Params) error {
-	chambers, err := h.Repo.GetAll()
+	chambers, err := h.ChamberController.GetAllChambers()
 	if err != nil {
-		return errors.Wrap(err, "could not get all chambers from repository")
+		return errors.Wrap(err, "could not get all chambers from controller")
 	}
 
 	if err = web.Respond(ctx, w, chambers, http.StatusOK); err != nil {
@@ -34,16 +41,16 @@ func (h *ChambersHandler) GetAll(ctx context.Context, w http.ResponseWriter, r *
 func (h *ChambersHandler) Get(ctx context.Context, w http.ResponseWriter, r *http.Request, p httprouter.Params) error {
 	id := p.ByName("id")
 
-	chamber, err := h.Repo.Get(id)
+	c, err := h.ChamberController.GetChamber(id)
 	if err != nil {
-		return errors.Wrap(err, "could not get chamber from repository")
+		return errors.Wrapf(err, "could not get chamber %s from controller", id)
 	}
 
-	if chamber == nil {
+	if c == nil {
 		return web.NewRequestError(fmt.Sprintf("chamber '%s' not found", id), http.StatusNotFound)
 	}
 
-	if err = web.Respond(ctx, w, chamber, http.StatusOK); err != nil {
+	if err := web.Respond(ctx, w, c, http.StatusOK); err != nil {
 		return errors.Wrap(err, "problem responding to client")
 	}
 
@@ -56,11 +63,11 @@ func (h *ChambersHandler) Save(ctx context.Context, w http.ResponseWriter, r *ht
 		return errors.Wrap(err, "could not parse chamber")
 	}
 
-	if err = h.Repo.Save(&chamber); err != nil {
-		return errors.Wrap(err, "could not save chamber to repository")
+	if err := h.ChamberController.SaveChamber(&chamber); err != nil {
+		return errors.Wrap(err, "could not save chamber to controller")
 	}
 
-	if err = web.Respond(ctx, w, chamber, http.StatusOK); err != nil {
+	if err := web.Respond(ctx, w, chamber, http.StatusOK); err != nil {
 		return errors.Wrap(err, "problem responding to client")
 	}
 
@@ -71,20 +78,85 @@ func (h *ChambersHandler) Delete(ctx context.Context, w http.ResponseWriter, r *
 	p httprouter.Params) error {
 	id := p.ByName("id")
 
-	c, err := h.Repo.Get(id)
+	c, err := h.ChamberController.GetChamber(id)
 	if err != nil {
-		return errors.Wrap(err, "could not get chamber from repository")
+		return errors.Wrapf(err, "could not get chamber %s from controller", id)
 	}
 
 	if c == nil {
 		return web.NewRequestError(fmt.Sprintf("chamber '%s' not found", id), http.StatusNotFound)
 	}
 
-	if err := h.Repo.Delete(id); err != nil {
-		return errors.Wrap(err, "could not delete chamber from repository")
+	if err := c.StopFermentation(); err != nil {
+		if errors.Is(err, chamber.ErrNotFermenting) {
+			h.Logger.WithError(err).Warn("Error occurred while stopping fermentation")
+		} else {
+			return errors.Wrapf(err, "could not stop fermentation for chamber %s", id)
+		}
 	}
 
-	if err = web.Respond(ctx, w, nil, http.StatusOK); err != nil {
+	if err := h.ChamberController.DeleteChamber(id); err != nil {
+		return errors.Wrapf(err, "could not delete chamber %s from controller", id)
+	}
+
+	if err := web.Respond(ctx, w, nil, http.StatusOK); err != nil {
+		return errors.Wrap(err, "problem responding to client")
+	}
+
+	return nil
+}
+
+func (h *ChambersHandler) Start(ctx context.Context, w http.ResponseWriter, r *http.Request,
+	p httprouter.Params) error {
+	id := p.ByName("id")
+	stepVal := r.URL.Query().Get("step")
+
+	step, err := strconv.Atoi(stepVal)
+	if err != nil {
+		return web.NewRequestError(fmt.Sprintf("step %s is invalid", stepVal), http.StatusBadRequest)
+	}
+
+	if err := h.ChamberController.StartFermentation(id, step); err != nil {
+		switch {
+		case errors.As(err, chamber.ErrInvalidStep):
+			return web.NewRequestError(fmt.Sprintf("step %d is invalid for chamber '%s'", step, id), http.StatusBadRequest)
+		case errors.As(err, controller.ErrNotFound):
+			return web.NewRequestError(fmt.Sprintf("chamber '%s' not found", id), http.StatusNotFound)
+		case errors.As(err, controller.ErrNoCurrentBatch):
+			return web.NewRequestError(fmt.Sprintf("chamber '%s' does not have a current batch", id), http.StatusBadRequest)
+		}
+
+		return errors.Wrapf(err, "could not start fermentation for chamber %s", id)
+	}
+
+	if err := web.Respond(ctx, w, &Status{Message: "Success"}, http.StatusOK); err != nil {
+		return errors.Wrap(err, "problem responding to client")
+	}
+
+	return nil
+}
+
+func (h *ChambersHandler) Stop(ctx context.Context, w http.ResponseWriter, r *http.Request, p httprouter.Params) error {
+	id := p.ByName("id")
+
+	c, err := h.ChamberController.GetChamber(id)
+	if err != nil {
+		return errors.Wrapf(err, "could not get chamber %s  from controller", id)
+	}
+
+	if c == nil {
+		return web.NewRequestError(fmt.Sprintf("chamber '%s' not found", id), http.StatusNotFound)
+	}
+
+	if err := c.StopFermentation(); err != nil {
+		if errors.Is(err, chamber.ErrNotFermenting) {
+			return web.NewRequestError(err.Error(), http.StatusBadRequest)
+		}
+
+		return errors.Wrapf(err, "could not stop fermentation for chamber %s", id)
+	}
+
+	if err := web.Respond(ctx, w, &Status{Message: "Success"}, http.StatusOK); err != nil {
 		return errors.Wrap(err, "problem responding to client")
 	}
 
